# pysquirrel

./: .gitignore  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml  pytest.yml
data/: NUTS2021-NUTS2024.xlsx
pysquirrel/: __init__.py  core.py
pysquirrel/data/: NUTS2021-2024.yaml  SR2021-2024.yaml
src/pysquirrel/: __init__.py  core.py
tests/: test_core.py
